docs/_archive/silverkube/ingress-migration-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ibt-sam
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deploy-1
  name: deploy-1
  namespace: ibt-sam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-1
  strategy: {}
  template:
    metadata:
      labels:
        app: deploy-1
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
      volumes:
      - emptyDir: {}
        name: html
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deploy-1
  name: deploy-1
  namespace: ibt-sam
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: deploy-1
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abc
  namespace: ibt-sam
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ibt-sam.local
    http:
      paths:
      - backend:
          service:
            name: deploy-1
            port:
              number: 8080
        path: /test
        pathType: Prefix
  tls:
  - hosts:
    - ibt-sam.local
    secretName: deploy-1
status:
  loadBalancer: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    hostname: ibt-sam.local
    tls:
      certificateRefs:
      - kind: Secret
        name: deploy-1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-httproute
  namespace: ibt-sam
spec:
  parentRefs:
  - name: example-gateway
    namespace: default
  hostnames:
  - "ibt-sam.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: deploy-1
      port: 8080

# controlplane ~ ➜  curl --resolve ibt-sam.local:32595:192.168.102.176 https://ibt-sam.local:32595/test -k
# love you my sweetheart, ibtisam

# controlplane ~ ➜  curl --resolve ibt-sam.local:30511:192.168.102.176 https://ibt-sam.local:30511 -k
# love you my sweetheart, ibtisam
